<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_add_todo"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:minHeight="?android:attr/actionBarSize"
                android:background="@color/colorPrimaryDark"
                android:elevation="5dp">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                <ImageButton
                        android:id="@+id/back_button_from_todo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@android:color/transparent"
                        android:layout_marginEnd="12dp"
                        android:src="@drawable/ic_arrow_back"
                        android:contentDescription="@string/back_to_menu" />
                <EditText
                        android:id="@+id/add_title_edit_text_todo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:hint="@string/add_title"
                        android:layout_marginEnd="12dp"
                        android:layout_gravity="center_horizontal"
                        android:paddingTop="30dp"
                        android:layout_marginBottom="12dp"
                        android:layout_weight="1"
                        android:textSize="38sp"
                        android:backgroundTint="@android:color/white"
                        android:textColorHint="@color/colorHint"
                        android:textColor="@android:color/white"
                        android:inputType="text" />
                <ImageButton
                        android:id="@+id/delete_all_text_button_todo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="12dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_cancel_black_24dp"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:orientation="vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/description"/>
            <EditText
                    android:id="@+id/description_add_todo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginTop="8dp"/>
        </LinearLayout>
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_create_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_save_black_24dp"
            android:layout_margin="16dp" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
