...
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_todo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_add_white_24dp"
            android:contentDescription="Hey"
            android:layout_margin="16dp" />
...
